# analyst_toolkit

./: .coderabbit.yaml  .dockerignore  .envrc.example  .gitignore  .pip-audit-known-vulns  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.mcp  MESSAGES.md  Makefile  README.md  SECURITY.md  docker-compose.mcp.yml  environment.yaml  pyproject.toml  requirements-dev.in  requirements-dev.lock.txt  requirements-mcp.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: analyst-toolkit-mcp-ci.yml  discussions-announcement.yml
config/: auto_heal_request_template.yaml  certification_config_template.yaml  data_dictionary_request_template.yaml  diag_config_template.yaml  dups_config_template.yaml  final_audit_config_template.yaml  handling_config_template.yaml  imputation_config_template.yaml  nightly_silver_qa_config.yaml  normalization_config_template.yaml  outlier_config_template.yaml  validation_config_template.yaml
config/golden_templates/: compliance_audit.yaml  fraud_detection.yaml  quick_migration.yaml
demo_buildout/: ANALYST_TOOLKIT_FACELIFT.md  DEMO_PLAN.md
exports/sample/cleaned_datasets/: 0002_QA_penguins_certified.csv  0003_QA_penguins_certified.csv
exports/sample/reports/: 0002_QA_FinalAuditReport.xlsx  0002_QA_diagnostics_summary.xlsx  cockpit_dashboard.html  diagnostics_report.html  final_audit_report.html  normalization_report.xlsx
notebooks/: 00_analyst_toolkit_modular_demo.html  00_analyst_toolkit_modular_demo.ipynb  01_analyst_toolkit_pipeline_demo.ipynb
resource_hub/: .gitignore  config_guide.md  mcp_server_guide.md  monolith_decomposition_execution_plan.md  notebook_usage_guide.md  usage_guide.md
scripts/: generate_changelog.py
src/: __init__.py
src/analyst_toolkit/: run_toolkit_pipeline.py
src/analyst_toolkit/config_templates/: __init__.py  final_audit_config_template.yaml  runtime_overlay_template.yaml  validation_config_template.yaml
src/analyst_toolkit/m00_utils/: __init__.py  config_loader.py  dashboard_auto_heal.py  dashboard_certification.py  dashboard_core.py  dashboard_data_prep.py  dashboard_diagnostics.py  dashboard_dictionary.py  dashboard_html.py  dashboard_modules.py  dashboard_plots.py  dashboard_shared.py  dashboard_tables.py  dashboard_views.py  data_dictionary_builder.py  data_viewer.py  export_utils.py  load_data.py  pipeline_config_validation.py  plot_runtime.py  plot_viewer.py  plot_viewer_comparison.py  rendering_utils.py  report_generator.py  report_html.py  report_tables.py  scoring.py
src/analyst_toolkit/m01_diagnostics/: __init__.py  data_diag.py  diag_display.py  run_diag_pipeline.py
src/analyst_toolkit/m02_validation/: __init__.py  run_validation_pipeline.py  validate_data.py  validation_display.py
src/analyst_toolkit/m03_normalization/: __init__.py  display_normalization.py  normalize_data.py  run_normalization_pipeline.py
src/analyst_toolkit/m04_duplicates/: __init__.py  detect_dupes.py  dup_display.py  handle_dupes.py  run_dupes_pipeline.py
src/analyst_toolkit/m05_detect_outliers/: __init__.py  detect_outliers.py  display_detection.py  plot_outliers.py  run_detection_pipeline.py
src/analyst_toolkit/m06_outlier_handling/: __init__.py  display_handling.py  outlier_handler.py  run_handling_pipeline.py
src/analyst_toolkit/m07_imputation/: __init__.py  display_imputation.py  impute_data.py  run_imputation_pipeline.py
src/analyst_toolkit/m08_visuals/: comparison_plots.py  distributions.py  summary_plots.py
src/analyst_toolkit/m10_final_audit/: __init__.py  display_final_audit.py  final_audit_pipeline.py  final_audit_producer.py
src/analyst_toolkit/mcp_server/: __init__.py  auth.py  config_models.py  config_normalizers.py  destination_routing.py  io.py  io_history_files.py  io_path_normalization.py  io_serialization.py  io_storage.py  job_state.py  local_artifact_server.py  observability.py  registry.py  resources.py  response_utils.py  rpc_dispatch.py  runtime_overlay.py  schemas.py  server.py  state.py  templates.py
src/analyst_toolkit/mcp_server/input/: __init__.py  adapters.py  errors.py  ingest.py  limits.py  loaders.py  models.py  registry.py  storage.py
src/analyst_toolkit/mcp_server/tools/: __init__.py  auto_heal.py  cockpit.py  cockpit_capabilities.py  cockpit_content.py  cockpit_history.py  cockpit_runtime.py  cockpit_schemas.py  cockpit_shared.py  cockpit_templates.py  config_schema.py  data_dictionary.py  diagnostics.py  drift.py  duplicates.py  final_audit.py  imputation.py  infer_configs.py  input_ingest.py  jobs.py  normalization.py  outliers.py  preflight_config.py  read_artifact.py  session.py  upload_input.py  validation.py
src/archive/: display_utils.py  handle_outliers.py  plot_outliers.py  run_outlier_eda.py
tests/: conftest.py  test_export_plot_wiring.py  test_golden_template_execution.py  test_hardening.py  test_job_state.py  test_mcp_server.py  test_mcp_tool_regressions.py  test_mcp_tool_regressions_infer.py  test_mcp_tool_regressions_io.py  test_mcp_tool_regressions_workflows.py  test_outliers.py  test_pipeline_config_validation.py  test_run_toolkit_pipeline.py  test_template_contracts.py  test_validation.py  test_validation_final_audit_parity.py
tests/hardening/: conftest.py  test_auto_heal_behavior.py  test_config_and_upload.py  test_history_and_contracts.py  test_pipeline_integrations.py  test_state_store.py
tests/m00_utils/: test_dashboard_html.py  test_export_utils.py  test_load_data.py  test_plot_runtime.py  test_rendering_utils.py  test_report_tables.py
tests/mcp_server/: conftest.py  test_destination_routing.py  test_http_auth_metrics.py  test_input_ingest.py  test_input_limits.py  test_input_loaders.py  test_input_registry.py  test_local_artifact_server.py  test_rpc_cockpit_dashboard.py  test_rpc_cockpit_guides.py  test_rpc_data_dictionary.py  test_rpc_pipeline_dashboard.py  test_rpc_preflight.py  test_rpc_resources.py  test_rpc_run_history.py  test_rpc_tool_registry.py  test_rpc_tools.py  test_runtime_overlay.py
