# ----------------------------------------
# Build System Configuration
# ----------------------------------------
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ----------------------------------------
# Project Metadata (PEP 621)
# ----------------------------------------
[project]
name = "analyst_toolkit"
version = "0.4.1"
description = "A comprehensive toolkit for data analysis, validation, and diagnostics."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Garrett Schumacher", email = "your@email.com" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# ----------------------------------------
# Core Dependencies
# ----------------------------------------
dependencies = [
  "pandas",
  "matplotlib",
  "seaborn",
  "joblib",
  "PyYAML",
  "thefuzz",
  "XlsxWriter",
  "openpyxl"
]

# ----------------------------------------
# Optional Dependencies
# ----------------------------------------
[project.optional-dependencies]
notebook = [
  "ipython",
  "ipywidgets",
]
mcp = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "mcp>=1.2.1",
  "pyarrow>=14.0",
  "google-cloud-storage>=2.14",
  "pydantic>=2.0",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio",
  "pytest-mock",
  "ruff",
  "pre-commit",
  "httpx",
  "mypy",
  "pandas-stubs",
  "types-PyYAML",
]

# ----------------------------------------
# Tool Configurations
# ----------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501", # Line length handled by formatter
    "E402", # Module level import not at top of file (common in our toolkit for display logic)
    "F401", # Unused import (common in our self-registration modules)
]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
check_untyped_defs = false
implicit_optional = true
strict_optional = false
exclude = ["tests/"]

# ----------------------------------------
# Setuptools Package Discovery
# ----------------------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "analyst_toolkit",
  "analyst_toolkit.*",
]

[project.scripts]
analyst-toolkit = "analyst_toolkit.run_toolkit_pipeline:main"
