# ----------------------------------------
# Build System Configuration
# ----------------------------------------
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ----------------------------------------
# Project Metadata (PEP 621)
# ----------------------------------------
[project]
name = "analyst_toolkit"
version = "0.5.0"
description = "A comprehensive toolkit for data analysis, validation, and diagnostics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Garrett Schumacher", email = "me@garrettschumacher.com" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# ----------------------------------------
# Core Dependencies
# ----------------------------------------
dependencies = [
  "pandas>=2.0,<3",
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
  "matplotlib>=3.7,<4",
  "seaborn>=0.12,<1",
  "joblib>=1.2,<2",
  "PyYAML>=6.0,<7",
  "thefuzz>=0.20,<1",
  "XlsxWriter>=3.1,<4",
  "openpyxl>=3.1,<4",
]

# ----------------------------------------
# Optional Dependencies
# ----------------------------------------
[project.optional-dependencies]
notebook = [
  "ipython>=8,<9",
  "ipywidgets>=8,<9",
]
mcp = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.29,<1",
  "mcp>=1.2.1,<2",
  "pyarrow>=14.0,<20",
  "google-cloud-storage>=2.14,<4",
  "gcsfs>=2024.2.0,<2026.0.0",
  "python-multipart>=0.0.9,<1",
  "pydantic>=2.0,<3",
  "analyst_toolkit_deploy @ https://github.com/G-Schumacher44/analyst_toolkit_deployment_utility/releases/download/v0.2.5/analyst_toolkit_deploy-0.2.5-py3-none-any.whl",
]
dev = [
  "pytest>=7.0,<9",
  "pytest-cov>=7.1,<8",
  "pytest-asyncio>=0.23,<2",
  "pytest-mock>=3.12,<4",
  "ruff>=0.6,<1",
  "pre-commit>=3.7,<5",
  "yamllint>=1.35,<2",
  "httpx>=0.27,<1",
  "mypy>=1.11,<2",
  "pandas-stubs>=2.2,<3",
  "types-PyYAML>=6.0,<7",
]

# ----------------------------------------
# Tool Configurations
# ----------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501", # Line length handled by formatter
    "E402", # Module level import not at top of file (common in our toolkit for display logic)
    "F401", # Unused import (common in our self-registration modules)
]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
check_untyped_defs = false
implicit_optional = true
strict_optional = false

# ----------------------------------------
# Setuptools Package Discovery
# ----------------------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "analyst_toolkit",
  "analyst_toolkit.*",
]

[tool.setuptools.package-data]
"analyst_toolkit.config_templates" = ["*.yaml", "golden_templates/*.yaml"]

[project.scripts]
analyst-toolkit = "analyst_toolkit.run_toolkit_pipeline:main"
